// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Path /> should not accept dashed props 1`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    data-klear360-component="icon"
    fill="none"
    height="40px"
    viewBox="0 0 6 6"
    width="40px"
  >
    <path
      d=""
      data-klear360-component="svg-path"
    />
  </svg>
</div>
`;

exports[`<Path /> should render html path component 1`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    data-klear360-component="icon"
    fill="none"
    height="40px"
    viewBox="0 0 6 6"
    width="40px"
  >
    <path
      clip-path="#id1"
      clip-rule="evenodd"
      d="M2 2h2v2H2V2"
      data-klear360-component="svg-path"
      fill="#000"
      fill-opacity="0.5"
      fill-rule="nonzero"
      stroke="#1212"
      stroke-linecap="square"
      stroke-linejoin="bevel"
      stroke-width="2px"
    />
  </svg>
</div>
`;
